--- a/3/nbproject/project.properties
+++ b/3/nbproject/project.properties
@@ -1,5 +1,5 @@
 config.folder=
-file.reference.css-3=.
+file.reference.proyectofinal-3=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.css-3}
+site.root.folder=${file.reference.proyectofinal-3}
 test.folder=
